--- a/gaia-kwsearch/gaia-kwsearch-mcp-server-stdio/Cargo.toml
+++ b/gaia-kwsearch/gaia-kwsearch-mcp-server-stdio/Cargo.toml
@@ -21,3 +21,5 @@ reqwest              = { workspace = true, features = ["rustls-tls", "json"] }
 pin-project-lite     = { workspace = true }
 endpoints            = { workspace = true, features = ["index"] }
 gaia-kwsearch-common = { workspace = true }
+clap                 = { workspace = true, features = ["derive"] }
+once_cell            = { workspace = true }
