--- a/gaia-kwsearch/gaia-kwsearch-mcp-client/Cargo.toml
+++ b/gaia-kwsearch/gaia-kwsearch-mcp-client/Cargo.toml
@@ -21,4 +21,4 @@ anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }
 clap = { version = "^4.5", features = ["cargo", "derive"] }
-gaia-kwsearch-common = { workspace = true }
+gaia-kwsearch-mcp-common = { workspace = true }
