--- a/gaia-elastic/gaia-elastic-mcp-client/Cargo.toml
+++ b/gaia-elastic/gaia-elastic-mcp-client/Cargo.toml
@@ -21,5 +21,5 @@ anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }
 clap = { version = "^4.5", features = ["cargo", "derive"] }
-gaia-elastic-mcp-common = { path = "../gaia-elastic-mcp-common" }
+gaia-elastic-mcp-common = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
