--- a/gaia-tidb/gaia-tidb-mcp-client/Cargo.toml
+++ b/gaia-tidb/gaia-tidb-mcp-client/Cargo.toml
@@ -19,5 +19,5 @@ anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }
 clap = { version = "^4.5", features = ["cargo", "derive"] }
-gaia-tidb-mcp-common = { path = "../gaia-tidb-mcp-common" }
+gaia-tidb-mcp-common = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
