--- a/gaia-tidb/gaia-tidb-mcp-server-streamhttp/Cargo.toml
+++ b/gaia-tidb/gaia-tidb-mcp-server-streamhttp/Cargo.toml
@@ -22,7 +22,7 @@ tokio-tungstenite    = { workspace = true }
 reqwest              = { workspace = true, features = ["json"] }
 pin-project-lite     = { workspace = true }
 endpoints            = { workspace = true, features = ["index"] }
-gaia-tidb-mcp-common = { path = "../gaia-tidb-mcp-common" }
+gaia-tidb-mcp-common = { workspace = true }
 mysql                = { workspace = true, features = ["rustls-tls"] }
 clap                 = { version = "4.5", features = ["derive"] }
 once_cell            = { version = "1.18" }
