--- a/gaia-qdrant/gaia-qdrant-mcp-client/Cargo.toml
+++ b/gaia-qdrant/gaia-qdrant-mcp-client/Cargo.toml
@@ -21,4 +21,4 @@ anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt"] }
 clap = { workspace = true, features = ["cargo", "derive"] }
-gaia-qdrant-common = { workspace = true }
+gaia-qdrant-mcp-common = { workspace = true }
