--- a/gaia-qdrant/gaia-qdrant-mcp-common/Cargo.toml
+++ b/gaia-qdrant/gaia-qdrant-mcp-common/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name        = "gaia-qdrant-common"
+name        = "gaia-qdrant-mcp-common"
 version     = "0.1.0"
 edition     = { workspace = true }
 repository  = { workspace = true }
