feat(calculator): add `gaia-calculator-mcp-server`
Signed-off-by: Xin Liu <sam@secondstate.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ members = [
     "gaia-tidb/gaia-tidb-mcp-common",
     "gaia-tidb/gaia-tidb-mcp-client",
     "gaia-tidb/gaia-tidb-mcp-server-streamhttp",
+    "gaia-calculator/gaia-calculator-mcp-server",
 
 ]
 resolver = "3"
@@ -50,10 +51,11 @@ gaia-qdrant-mcp-common   = { path = "gaia-qdrant/gaia-qdrant-mcp-common" }
 gaia-kwsearch-mcp-common = { path = "gaia-kwsearch/gaia-kwsearch-mcp-common" }
 gaia-elastic-mcp-common  = { path = "gaia-elastic/gaia-elastic-mcp-common" }
 gaia-tidb-mcp-common     = { path = "gaia-tidb/gaia-tidb-mcp-common" }
-clap                     = "4.4.6"
+clap                     = "4.5"
 endpoints                = "0.30.0"
 mysql                    = "26.0.0"
 once_cell                = "1.18"
+axum                     = "0.8"
 
 [workspace.package]
 edition    = "2024"
