feat(weather): add `gaia-weather-mcp-server`
Signed-off-by: Xin Liu <sam@secondstate.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ members = [
     "gaia-tidb/gaia-tidb-mcp-server-sse",
     "gaia-tidb/gaia-tidb-mcp-common",
     "gaia-tidb/gaia-tidb-mcp-client",
-    "gaia-tidb/gaia-tidb-mcp-server-streamhttp",
+    "gaia-tidb/gaia-tidb-mcp-server-streamhttp", "gaia-weather/gaia-weather-mcp-server",
 ]
 resolver = "3"
 
