ci(release): remove client binaries
Signed-off-by: Xin Liu <sam@secondstate.io>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,42 +73,14 @@ jobs:
       - name: Strip binary (linux and macos)
         if: matrix.build == 'linux-x86_64' || matrix.build == 'linux-aarch64' || matrix.build == 'macos-x86_64' || matrix.build == 'macos-arm64'
         run: |
-          strip "target/${{ matrix.target }}/release/gaia-calculator-mcp-client"
           strip "target/${{ matrix.target }}/release/gaia-calculator-mcp-server"
-
-          strip "target/${{ matrix.target }}/release/gaia-weather-mcp-client"
           strip "target/${{ matrix.target }}/release/gaia-weather-mcp-server"
-
-          strip "target/${{ matrix.target }}/release/gaia-qdrant-mcp-client"
           strip "target/${{ matrix.target }}/release/gaia-qdrant-mcp-server"
-
-          strip "target/${{ matrix.target }}/release/gaia-kwsearch-mcp-client"
           strip "target/${{ matrix.target }}/release/gaia-kwsearch-mcp-server"
-
-          strip "target/${{ matrix.target }}/release/gaia-elastic-mcp-client"
           strip "target/${{ matrix.target }}/release/gaia-elastic-mcp-server"
-
-          strip "target/${{ matrix.target }}/release/gaia-tidb-mcp-client"
           strip "target/${{ matrix.target }}/release/gaia-tidb-mcp-server"
 
-
-          ls -al "target/${{ matrix.target }}/release/gaia-calculator-mcp-client"
-          ls -al "target/${{ matrix.target }}/release/gaia-calculator-mcp-server"
-
-          ls -al "target/${{ matrix.target }}/release/gaia-weather-mcp-client"
-          ls -al "target/${{ matrix.target }}/release/gaia-weather-mcp-server"
-
-          ls -al "target/${{ matrix.target }}/release/gaia-qdrant-mcp-client"
-          ls -al "target/${{ matrix.target }}/release/gaia-qdrant-mcp-server"
-
-          ls -al "target/${{ matrix.target }}/release/gaia-kwsearch-mcp-client"
-          ls -al "target/${{ matrix.target }}/release/gaia-kwsearch-mcp-server"
-
-          ls -al "target/${{ matrix.target }}/release/gaia-elastic-mcp-client"
-          ls -al "target/${{ matrix.target }}/release/gaia-elastic-mcp-server"
-
-          ls -al "target/${{ matrix.target }}/release/gaia-tidb-mcp-client"
-          ls -al "target/${{ matrix.target }}/release/gaia-tidb-mcp-server"
+          ls -al "target/${{ matrix.target }}/release"
 
       - name: Build archive
         shell: bash
@@ -118,22 +90,11 @@ jobs:
 
           if [ "${{ matrix.build }}" = "linux-x86_64" ] || [ "${{ matrix.build }}" = "linux-aarch64" ]; then
 
-            cp "../target/${{ matrix.target }}/release/gaia-calculator-mcp-client" ./
             cp "../target/${{ matrix.target }}/release/gaia-calculator-mcp-server" ./
-
-            cp "../target/${{ matrix.target }}/release/gaia-weather-mcp-client" ./
             cp "../target/${{ matrix.target }}/release/gaia-weather-mcp-server" ./
-
-            cp "../target/${{ matrix.target }}/release/gaia-qdrant-mcp-client" ./
             cp "../target/${{ matrix.target }}/release/gaia-qdrant-mcp-server" ./
-
-            cp "../target/${{ matrix.target }}/release/gaia-kwsearch-mcp-client" ./
             cp "../target/${{ matrix.target }}/release/gaia-kwsearch-mcp-server" ./
-
-            cp "../target/${{ matrix.target }}/release/gaia-elastic-mcp-client" ./
             cp "../target/${{ matrix.target }}/release/gaia-elastic-mcp-server" ./
-
-            cp "../target/${{ matrix.target }}/release/gaia-tidb-mcp-client" ./
             cp "../target/${{ matrix.target }}/release/gaia-tidb-mcp-server" ./
 
             tar -czf "${{ matrix.archive-name }}" *
@@ -141,22 +102,11 @@ jobs:
 
           if [ "${{ matrix.build }}" = "macos-x86_64" ] || [ "${{ matrix.build }}" = "macos-arm64" ]; then
 
-            cp "../target/${{ matrix.target }}/release/gaia-calculator-mcp-client" ./
             cp "../target/${{ matrix.target }}/release/gaia-calculator-mcp-server" ./
-
-            cp "../target/${{ matrix.target }}/release/gaia-weather-mcp-client" ./
             cp "../target/${{ matrix.target }}/release/gaia-weather-mcp-server" ./
-
-            cp "../target/${{ matrix.target }}/release/gaia-qdrant-mcp-client" ./
             cp "../target/${{ matrix.target }}/release/gaia-qdrant-mcp-server" ./
-
-            cp "../target/${{ matrix.target }}/release/gaia-kwsearch-mcp-client" ./
             cp "../target/${{ matrix.target }}/release/gaia-kwsearch-mcp-server" ./
-
-            cp "../target/${{ matrix.target }}/release/gaia-elastic-mcp-client" ./
             cp "../target/${{ matrix.target }}/release/gaia-elastic-mcp-server" ./
-
-            cp "../target/${{ matrix.target }}/release/gaia-tidb-mcp-client" ./
             cp "../target/${{ matrix.target }}/release/gaia-tidb-mcp-server" ./
 
             tar -czf "${{ matrix.archive-name }}" *
