refactor!(qdrant): improve `SearchPointsRequest`
Signed-off-by: Xin Liu <sam@secondstate.io>

--- a/gaia-qdrant/gaia-qdrant-mcp-common/Cargo.toml
+++ b/gaia-qdrant/gaia-qdrant-mcp-common/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name        = "gaia-qdrant-mcp-common"
 edition     = { workspace = true }
+version     = { workspace = true }
 repository  = { workspace = true }
 license     = { workspace = true }
 categories  = ["data-structures"]
