--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
 [workspace]
 members = [
+    "gaia-agentic-search/gaia-agentic-search-mcp-client",
+    "gaia-agentic-search/gaia-agentic-search-mcp-common",
+    "gaia-agentic-search/gaia-agentic-search-mcp-server",
     "gaia-calculator/gaia-calculator-mcp-client",
     "gaia-calculator/gaia-calculator-mcp-server",
     "gaia-elastic/gaia-elastic-mcp-client",
@@ -24,31 +27,32 @@ members = [
 resolver = "3"
 
 [workspace.dependencies]
-rmcp                     = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "a62c6d1d" }
-tokio                    = "1"
-serde                    = "1.0"
-serde_json               = "1.0"
-anyhow                   = "1.0"
-tracing                  = "0.1"
-tracing-subscriber       = "0.3"
-futures                  = "0.3"
-rand                     = "0.9"
-schemars                 = "0.9"
-hyper                    = "1"
-hyper-util               = "0.1"
-tokio-tungstenite        = "0.27.0"
-reqwest                  = "0.12"
-pin-project-lite         = "0.2"
-gaia-qdrant-mcp-common   = { path = "gaia-qdrant/gaia-qdrant-mcp-common" }
-gaia-kwsearch-mcp-common = { path = "gaia-kwsearch/gaia-kwsearch-mcp-common" }
-gaia-elastic-mcp-common  = { path = "gaia-elastic/gaia-elastic-mcp-common" }
-gaia-tidb-mcp-common     = { path = "gaia-tidb/gaia-tidb-mcp-common" }
-gaia-github-mcp-common   = { path = "gaia-github/gaia-github-mcp-common" }
-clap                     = "4.5"
-endpoints                = "0.31.0"
-mysql                    = "26.0.0"
-once_cell                = "1.18"
-axum                     = "0.8"
+rmcp                           = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "a62c6d1d" }
+tokio                          = "1"
+serde                          = "1.0"
+serde_json                     = "1.0"
+anyhow                         = "1.0"
+tracing                        = "0.1"
+tracing-subscriber             = "0.3"
+futures                        = "0.3"
+rand                           = "0.9"
+schemars                       = "0.9"
+hyper                          = "1"
+hyper-util                     = "0.1"
+tokio-tungstenite              = "0.27.0"
+reqwest                        = "0.12"
+pin-project-lite               = "0.2"
+gaia-qdrant-mcp-common         = { path = "gaia-qdrant/gaia-qdrant-mcp-common" }
+gaia-kwsearch-mcp-common       = { path = "gaia-kwsearch/gaia-kwsearch-mcp-common" }
+gaia-elastic-mcp-common        = { path = "gaia-elastic/gaia-elastic-mcp-common" }
+gaia-tidb-mcp-common           = { path = "gaia-tidb/gaia-tidb-mcp-common" }
+gaia-github-mcp-common         = { path = "gaia-github/gaia-github-mcp-common" }
+gaia-agentic-search-mcp-common = { path = "gaia-agentic-search/gaia-agentic-search-mcp-common" }
+clap                           = "4.5"
+endpoints                      = "0.31.0"
+mysql                          = "26.0.0"
+once_cell                      = "1.18"
+axum                           = "0.8"
 
 [workspace.package]
 edition    = "2024"
