--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ schemars                       = "0.9"
 hyper                          = "1"
 hyper-util                     = "0.1"
 tokio-tungstenite              = "0.27.0"
-reqwest                        = "0.12"
+reqwest                        = { version = "0.12", default-features = false }
 pin-project-lite               = "0.2"
 gaia-qdrant-mcp-common         = { path = "gaia-qdrant/gaia-qdrant-mcp-common" }
 gaia-kwsearch-mcp-common       = { path = "gaia-kwsearch/gaia-kwsearch-mcp-common" }
