--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
           cargo build --release
 
   build_linux:
-    runs-on: ${{ matrix.runner }}
+    runs-on: ${{ matrix.os }}
     container:
       image: ${{ matrix.image }}
     strategy:
@@ -74,14 +74,19 @@ jobs:
         build: [linux-x86_64, linux-aarch64]
         include:
           - build: linux-x86_64
-            runner: ubuntu-latest
+            os: ubuntu-22.04
             image: ubuntu:20.04
-            arch: x86_64
+            rust: nightly
+            target: x86_64-unknown-linux-gnu
+            archive-name: llama-nexus-unknown-linux-gnu-x86_64.tar.gz
+            bin-path: linux-x86_64-binary
           - build: linux-aarch64
-            runner: ubuntu-24.04-arm
+            os: ubuntu-22.04-arm
             image: arm64v8/ubuntu:20.04
-            arch: arm64
-        toolchain: [stable]
+            rust: nightly
+            target: aarch64-unknown-linux-gnu
+            archive-name: llama-nexus-unknown-linux-gnu-aarch64.tar.gz
+            bin-path: linux-aarch64-binary
       fail-fast: false
 
     steps:
@@ -98,6 +103,6 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
 
       - name: Build
-        run: |
-          echo "Building for architecture: ${{ matrix.arch }}"
-          cargo build --release
+        run: cargo build --verbose --release --target ${{ matrix.target }}
+        env:
+          RUST_BACKTRACE: 1
