chore(agentic): update deps
Signed-off-by: Xin Liu <sam@secondstate.io>

--- a/gaia-agentic-search/gaia-agentic-search-mcp-common/Cargo.toml
+++ b/gaia-agentic-search/gaia-agentic-search-mcp-common/Cargo.toml
@@ -21,4 +21,4 @@ hyper-util         = { workspace = true, features = ["tokio"] }
 tokio-tungstenite  = { workspace = true }
 reqwest            = { workspace = true, features = ["json"] }
 pin-project-lite   = { workspace = true }
-mysql              = { workspace = true }
+mysql_common       = "0.34.1"
