--- a/gaia-tidb/gaia-tidb-mcp-common/Cargo.toml
+++ b/gaia-tidb/gaia-tidb-mcp-common/Cargo.toml
@@ -6,8 +6,8 @@ repository.workspace = true
 license.workspace    = true
 
 [dependencies]
-serde      = { workspace = true, features = ["derive"] }
-serde_json = { workspace = true }
-rmcp       = { workspace = true, features = ["macros"] }
-endpoints  = { workspace = true, features = ["index"] }
-mysql      = { workspace = true }
+serde        = { workspace = true, features = ["derive"] }
+serde_json   = { workspace = true }
+rmcp         = { workspace = true, features = ["macros"] }
+endpoints    = { workspace = true, features = ["index"] }
+mysql_common = "0.34.1"
