--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,9 +50,9 @@ gaia-github-mcp-common         = { path = "gaia-github/gaia-github-mcp-common" }
 gaia-agentic-search-mcp-common = { path = "gaia-agentic-search/gaia-agentic-search-mcp-common" }
 clap                           = "4.5"
 endpoints                      = "0.32.0"
-mysql                          = "26.0.0"
 once_cell                      = "1.18"
 axum                           = "0.8"
+rustls                         = { version = "0.23.27", default-features = false }
 
 [workspace.package]
 edition    = "2024"
