--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,14 +91,15 @@ jobs:
       - name: Install dependencies silently
         run: |
           export DEBIAN_FRONTEND=noninteractive
-          apt update && apt install -y curl build-essential pkg-config
+          apt update && apt install -y curl build-essential pkg-config cmake clang nasm ninja-build git
 
       - name: Install Rust-stable
         uses: actions-rust-lang/setup-rust-toolchain@v1
-        with:
-          toolchain: stable
-          target: ${{ matrix.target }}
+
+      - name: List targets
+        run: |
+          rustup target list --installed
 
       - name: Build
         run: |
-          cargo build --verbose --release --target ${{ matrix.target }}
+          cargo build --release
