--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,27 +20,15 @@ jobs:
       matrix:
         build: [macos-x86_64, macos-arm64]
         include:
-          # - build: linux-x86_64
-          #   os: ubuntu-20.04
-          #   rust: nightly
-          #   target: x86_64-unknown-linux-gnu
-          #   archive-name: gaia-mcp-servers-linux-unknown-gnu-x86_64.tar.gz
-          #   bin-path: linux-x86_64-binary
-          # - build: linux-aarch64
-          #   os: ubuntu-20.04-arm
-          #   rust: nightly
-          #   target: aarch64-unknown-linux-gnu
-          #   archive-name: gaia-mcp-servers-linux-unknown-gnu-aarch64.tar.gz
-          #   bin-path: linux-aarch64-binary
           - build: macos-x86_64
             os: macos-latest
-            rust: nightly
+            rust: stable
             target: x86_64-apple-darwin
             archive-name: gaia-mcp-servers-apple-darwin-x86_64.tar.gz
             bin-path: macos-x86_64-binary
           - build: macos-arm64
             os: macos-latest
-            rust: nightly
+            rust: stable
             target: aarch64-apple-darwin
             archive-name: gaia-mcp-servers-apple-darwin-aarch64.tar.gz
             bin-path: macos-arm64-binary
@@ -51,27 +39,21 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: ${{ matrix.rust }}
-          profile: minimal
-          override: true
           target: ${{ matrix.target }}
 
-      # - name: Install dependencies
-      #   if: matrix.build == 'linux-x86_64' || matrix.build == 'linux-aarch64'
-      #   run: |
-      #     sudo apt-get update
-      #     sudo apt-get install -y build-essential pkg-config
-      #     rustup target add ${{ matrix.target }}
+      - name: List targets
+        run: |
+          rustup target list --installed
 
       - name: Build binary
-        run: cargo build --verbose --release --target ${{ matrix.target }}
+        run: cargo build --release --target ${{ matrix.target }}
         env:
           RUST_BACKTRACE: 1
 
-      - name: Strip binary (linux and macos)
-        # if: matrix.build == 'linux-x86_64' || matrix.build == 'linux-aarch64' || matrix.build == 'macos-x86_64' || matrix.build == 'macos-arm64'
+      - name: Strip binary
         run: |
           strip "target/${{ matrix.target }}/release/gaia-calculator-mcp-server"
           strip "target/${{ matrix.target }}/release/gaia-weather-mcp-server"
@@ -80,6 +62,7 @@ jobs:
           strip "target/${{ matrix.target }}/release/gaia-elastic-mcp-server"
           strip "target/${{ matrix.target }}/release/gaia-tidb-mcp-server"
           strip "target/${{ matrix.target }}/release/gaia-github-mcp-server"
+          strip "target/${{ matrix.target }}/release/gaia-agentic-search-mcp-server"
 
           ls -al "target/${{ matrix.target }}/release"
 
@@ -89,19 +72,6 @@ jobs:
           mkdir archive
           cd archive
 
-          # if [ "${{ matrix.build }}" = "linux-x86_64" ] || [ "${{ matrix.build }}" = "linux-aarch64" ]; then
-
-          #   cp "../target/${{ matrix.target }}/release/gaia-calculator-mcp-server" ./
-          #   cp "../target/${{ matrix.target }}/release/gaia-weather-mcp-server" ./
-          #   cp "../target/${{ matrix.target }}/release/gaia-qdrant-mcp-server" ./
-          #   cp "../target/${{ matrix.target }}/release/gaia-kwsearch-mcp-server" ./
-          #   cp "../target/${{ matrix.target }}/release/gaia-elastic-mcp-server" ./
-          #   cp "../target/${{ matrix.target }}/release/gaia-tidb-mcp-server" ./
-          #   cp "../target/${{ matrix.target }}/release/gaia-github-mcp-server" ./
-
-          #   tar -czf "${{ matrix.archive-name }}" *
-          # fi
-
           cp "../target/${{ matrix.target }}/release/gaia-calculator-mcp-server" ./
           cp "../target/${{ matrix.target }}/release/gaia-weather-mcp-server" ./
           cp "../target/${{ matrix.target }}/release/gaia-qdrant-mcp-server" ./
@@ -109,6 +79,7 @@ jobs:
           cp "../target/${{ matrix.target }}/release/gaia-elastic-mcp-server" ./
           cp "../target/${{ matrix.target }}/release/gaia-tidb-mcp-server" ./
           cp "../target/${{ matrix.target }}/release/gaia-github-mcp-server" ./
+          cp "../target/${{ matrix.target }}/release/gaia-agentic-search-mcp-server" ./
 
           tar -czf "${{ matrix.archive-name }}" *
           ls -al
@@ -153,28 +124,15 @@ jobs:
           export DEBIAN_FRONTEND=noninteractive
           apt update && apt install -y curl build-essential pkg-config
 
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: ${{ matrix.rust }}
-          profile: minimal
-          override: true
-          target: ${{ matrix.target }}
+      - name: Install Rust-stable
+        uses: actions-rust-lang/setup-rust-toolchain@v1
 
-      # - name: Install dependencies
-      #   if: matrix.build == 'linux-x86_64' || matrix.build == 'linux-aarch64'
-      #   run: |
-      #     sudo apt-get update
-      #     sudo apt-get install -y build-essential pkg-config
-      #     rustup target add ${{ matrix.target }}
-
-      - name: Build binary (linux and macos)
-        run: cargo build --verbose --release --target ${{ matrix.target }}
+      - name: Build binary
+        run: cargo build --release --target ${{ matrix.target }}
         env:
           RUST_BACKTRACE: 1
 
-      - name: Strip binary (linux and macos)
-        # if: matrix.build == 'linux-x86_64' || matrix.build == 'linux-aarch64' || matrix.build == 'macos-x86_64' || matrix.build == 'macos-arm64'
+      - name: Strip binary
         run: |
           strip "target/${{ matrix.target }}/release/gaia-calculator-mcp-server"
           strip "target/${{ matrix.target }}/release/gaia-weather-mcp-server"
@@ -183,6 +141,7 @@ jobs:
           strip "target/${{ matrix.target }}/release/gaia-elastic-mcp-server"
           strip "target/${{ matrix.target }}/release/gaia-tidb-mcp-server"
           strip "target/${{ matrix.target }}/release/gaia-github-mcp-server"
+          strip "target/${{ matrix.target }}/release/gaia-agentic-search-mcp-server"
 
           ls -al "target/${{ matrix.target }}/release"
 
@@ -199,23 +158,9 @@ jobs:
           cp "../target/${{ matrix.target }}/release/gaia-elastic-mcp-server" ./
           cp "../target/${{ matrix.target }}/release/gaia-tidb-mcp-server" ./
           cp "../target/${{ matrix.target }}/release/gaia-github-mcp-server" ./
+          cp "../target/${{ matrix.target }}/release/gaia-agentic-search-mcp-server" ./
 
           tar -czf "${{ matrix.archive-name }}" *
-
-
-          # if [ "${{ matrix.build }}" = "macos-x86_64" ] || [ "${{ matrix.build }}" = "macos-arm64" ]; then
-
-          #   cp "../target/${{ matrix.target }}/release/gaia-calculator-mcp-server" ./
-          #   cp "../target/${{ matrix.target }}/release/gaia-weather-mcp-server" ./
-          #   cp "../target/${{ matrix.target }}/release/gaia-qdrant-mcp-server" ./
-          #   cp "../target/${{ matrix.target }}/release/gaia-kwsearch-mcp-server" ./
-          #   cp "../target/${{ matrix.target }}/release/gaia-elastic-mcp-server" ./
-          #   cp "../target/${{ matrix.target }}/release/gaia-tidb-mcp-server" ./
-          #   cp "../target/${{ matrix.target }}/release/gaia-github-mcp-server" ./
-
-          #   tar -czf "${{ matrix.archive-name }}" *
-          # fi
-
           ls -al
 
       - name: Upload archive
