refactor!(agentic): use `TIDB_CONNECTION` env variable to specify TiDB connection string
Signed-off-by: Xin Liu <sam@secondstate.io>

--- a/gaia-agentic-search/gaia-agentic-search-mcp-server/Cargo.toml
+++ b/gaia-agentic-search/gaia-agentic-search-mcp-server/Cargo.toml
@@ -32,3 +32,4 @@ mysql = { version = "26.0.0", default-features = false, features = ["rustls-tls-
 clap = { workspace = true, features = ["derive"] }
 rustls = { workspace = true, features = ["ring"] }
 axum = { workspace = true, features = ["macros"] }
+regex = "1"
