--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ endpoints                      = "0.32.0"
 once_cell                      = "1.18"
 axum                           = "0.8"
 rustls                         = { version = "0.23.27", default-features = false }
+regex                          = "1"
 
 [workspace.package]
 edition    = "2024"
