--- a/gaia-tidb/gaia-tidb-mcp-server/Cargo.toml
+++ b/gaia-tidb/gaia-tidb-mcp-server/Cargo.toml
@@ -33,3 +33,4 @@ clap = { workspace = true, features = ["derive"] }
 once_cell = { workspace = true }
 rustls = { workspace = true, features = ["ring"] }
 axum = { workspace = true, features = ["macros"] }
+regex = { workspace = true }
