--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ members = [
 resolver = "3"
 
 [workspace.dependencies]
-rmcp                             = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "a62c6d1d" }
+rmcp                             = "0.2.1"
 tokio                            = "1"
 serde                            = "1.0"
 serde_json                       = "1.0"
